infrastructure/components/directory/lldap/exposure/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-ui
  namespace: controller-directory
  annotations:
    external-dns.alpha.kubernetes.io/hostname: directory.internal.${cluster}.${domain}
    external-dns.alpha.kubernetes.io/target: internal.${cluster}.${domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`directory.internal.${cluster}.${domain}`)
      kind: Rule
      # middlewares:
      #   - name: tailnet-only
      #     namespace: controller-ingress
      services:
        - name: lldap
          port: 17170
  tls:
    secretName: wildcard.${cluster}.${domain}.tls
